--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width, initial- scale=1.0">
     <title>Contact us </title>
-    <link rel="stylesheet" href="mind.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <script src="https://kit.fontawesome.com/d49c668863.js" crossorigin="anonymous"></script>
 </head>
 
@@ -21,10 +21,18 @@
 
         <div class="body1">
 
-            <p> I would love to keep in touch.
-            </p>
+            <h2> I would love to keep in touch.</h2>
             <ul>
-                <li><span><em>Social media</em></span>
+                <li><span><em>Contact Us</em></span>
+
+               
+                <li><span><em>Email</em></span> candacejdavis87@gmail.com</li>
+                <li><span><em>Phone</em></span>914-000-0000</li>
+                <ul class="social">
+                <li>
+                    <a href="https://www.instagram.com/kayla_itsines/" target="_blank"></a>
+                    <i class="fa-brands fa-square-instagram"></i>
+                </li>
 
                 <li>
                     <a href="https://www.linkedin.com/company/healthy" target="_blank"></a>
@@ -34,15 +42,16 @@
                     <a href="https://www.facebook.com/todayhealth/" target="_blank"></a>
                     <i class="fa-brands fa-square-facebook"></i>
                 </li>
-                <li><span><em>Email</em></span> candacejdavis87@gmail.com</li>
-                <li><span><em>Phone</em></span>914-000-0000</li>
 
             </ul>
-            <p>Thank you for taking the time out to read my blog..
-                The one and only.... Candace J Davis </p>
+            <h3>Thank you for taking the time out to read my blog..
+                The one and only.... Candace J Davis </h3>
 
         </div>
     </div>
 </body>
+<footer>
+    <button>Home</button>
+</footer>
 
 </html>
